--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,54 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.zip
+*.rar
+*.vi
+*.todo
+*~
+
+# OS or Editor folders
+._*
+Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
+*.sublime-project
+*.sublime-workspace
+.idea
+
+# Folders to ignore
+.sass-cache
+.tmp
+node_modules
+bower_components
+*/**/node_modules
+*/**/bower_components
+site/lib
+*/**/*.todo
+
+docs
+._.DS_Store
+
+.tmpTemplater
+.tmpPreproc
+
+npm-debug.log
+phantomjsdriver.log
+/nbproject/*
+
+**/sprite_96.*
+**/svg-fallback-sprite.*
+**/svg-sprite.*
